--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@progress/kendo-angular-common": "^2.0.0",
+    "@progress/kendo-angular-dateinputs": "^5.1.0",
+    "@progress/kendo-angular-inputs": "^7.2.0",
+    "@progress/kendo-angular-intl": "^3.1.0",
+    "@progress/kendo-angular-l10n": "^3.0.0",
+    "@progress/kendo-angular-label": "^3.0.2",
+    "@progress/kendo-angular-popup": "^4.0.0",
+    "@progress/kendo-drawing": "^1.10.0",
+    "@progress/kendo-licensing": "^1.1.4",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "ngx-dynamic-hooks": "^1.5.1",
@@ -30,6 +39,7 @@
     "@angular-devkit/build-angular": "~0.1100.2",
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
+    "@angular/localize": "^11.2.11",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
