--- a/package.json
+++ b/package.json
@@ -19,13 +19,20 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@progress/kendo-angular-buttons": "^6.1.1",
     "@progress/kendo-angular-common": "^2.0.0",
     "@progress/kendo-angular-dateinputs": "^5.1.0",
+    "@progress/kendo-angular-dropdowns": "^5.2.0",
+    "@progress/kendo-angular-excel-export": "^4.0.0",
+    "@progress/kendo-angular-grid": "^5.0.3",
     "@progress/kendo-angular-inputs": "^7.2.0",
     "@progress/kendo-angular-intl": "^3.1.0",
     "@progress/kendo-angular-l10n": "^3.0.0",
     "@progress/kendo-angular-label": "^3.0.2",
+    "@progress/kendo-angular-pdf-export": "^3.0.0",
     "@progress/kendo-angular-popup": "^4.0.0",
+    "@progress/kendo-angular-treeview": "^5.1.1",
+    "@progress/kendo-data-query": "^1.5.4",
     "@progress/kendo-drawing": "^1.10.0",
     "@progress/kendo-licensing": "^1.1.4",
     "bootstrap": "^4.6.0",
